--- a/src/style.css
+++ b/src/style.css
@@ -1,7 +1,89 @@
 body {
-    background-color: bisque;
+  background-color: white;
+  margin: 15% 20%;
 }
 
-.hello {
-    color: red;
-  }
+.to-do-section {
+  box-shadow: 0 0 5px 2px rgb(196, 196, 196);
+}
+
+.top {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  padding: 1% 1% 1% 1.8%;
+  border-bottom: 0.2px black solid;
+}
+
+h1 {
+  font-size: 1.5rem;
+}
+
+.sync-btn {
+  /* width: 80%; */
+  border: none;
+  background: none;
+  padding: 0%;
+}
+
+.sync-img {
+  width: 60%;
+}
+
+.task-form {
+  display: flex;
+  justify-content: space-between;
+  padding: 2.5%;
+  border: none;
+  border-bottom: rgb(0, 0, 0) 1px solid;
+}
+
+#task-input-field {
+  border: none;
+  width: 80%;
+  padding: 1%;
+}
+
+::placeholder {
+  font-style: italic;
+}
+
+#hidden-task-submit {
+  display: none;
+}
+
+.task-display {
+  padding: 0% 0.05% 0% 1%;
+  border-bottom: rgb(0, 0, 0) 1px solid;
+}
+
+.task-list {
+  margin: 0%;
+  list-style: none;
+  padding: 0%;
+}
+
+#task-line {
+  display: flex;
+  justify-content: start;
+  align-items: center;
+  border-bottom: 1px gray solid;
+}
+
+#checkbox {
+  margin-right: 2%;
+}
+
+.task-list li span {
+  width: 90%;
+}
+
+#more-btn {
+  width: 5%;
+  margin: 3% 0%;
+}
+
+.clear-all {
+  padding: 3%;
+  width: 100%;
+}
