Update modules with update and storage features

--- a/src/style.css
+++ b/src/style.css
@@ -72,6 +72,7 @@ h1 {
 }
 
 .task-desc {
+  font-size: 1.0rem;
   border: none;
   outline: none;
   width: 90%;
@@ -88,7 +89,6 @@ h1 {
 }
 
 .delete-btn {
-  display: none;
   width: 5%;
   margin: 3% 0%;
 }
@@ -101,4 +101,9 @@ h1 {
 .hide {
   display: unset;
   display: none;
+}
+
+.show {
+  display: unset;
+  display: block;
 }
